--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.5",
@@ -19,10 +20,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
+    "sendbird": "^3.0.156",
     "stripe": "^11.4.0",
-    "usps-webtools": "^1.0.7",
-    "xmlbuilder2": "^3.0.2",
     "twilio": "^3.54.1",
-    "twilio-chat": "^4.1.0"
+    "twilio-chat": "^4.1.0",
+    "usps-webtools": "^1.0.7",
+    "xmlbuilder2": "^3.0.2"
   }
 }
